# stock-market-toolkit

./: .env.example  .gitattributes  .gitignore  .pr-body.md  .pr-body.txt  .release-please-manifest.json  CHANGELOG.md  Makefile  README.md  docker-compose.feat-test.yml  docker-compose.yml  package-lock.json  package.json  release-please-config.json  skills-lock.json
backend/: .env.example  Dockerfile  apply_patch.py  e2e_test_marker.txt  main.py  pandas_ta_compat.py  pyproject.toml  requirements-dev.txt  requirements.txt  verify.py
backend/alembic/versions/: a1b2c3d4e5f6_add_notification_deliveries.py  b2c3d4e5f6a1_add_symbol_name_to_alerts.py
backend/app/: __init__.py  auth.py  cli.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/alembic/: env.py
backend/app/middleware/: access_log.py
backend/app/models/: __init__.py  admin.py  alert.py  fundamentals.py  user.py  watchlist.py
backend/app/providers/: __init__.py  base.py  chain.py  circuit_breaker.py  finmind.py  registry.py  yfinance.py
backend/app/routes/: admin.py  alerts.py  analysis.py  auth.py  cron.py  fundamentals.py  mcp.py  news.py  search.py  stock_info.py  stocks.py  (+1 more)
backend/logs/: app.json
backend/tests/: test_admin_smtp.py  test_alerts_create.py  test_alerts_discord.py  test_analysis.py  test_audit.py  test_cache.py  test_docker_release_publish.py  test_ingestion.py  test_invite.py  test_market_hours.py  test_migration_baseline.py  test_models_registry.py  test_notification_settings.py  test_schemas_registry.py  test_scoring.py  test_smoke.py  test_stocks.py
(+147 files in other folders)
