[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-market-toolkit-backend"
dynamic = ["version"]
description = "Stock Market Toolkit - Backend"
requires-python = ">=3.12"

[tool.setuptools.dynamic]
version = {file = "app/VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.scripts]
stock-toolkit = "app.cli:main"
